testing lstm and new model creation

--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -356,7 +356,7 @@
     "                if (t+i < midi_array.shape[0]):\n",
     "                    sum += midi_array[t+i][inst]\n",
     "            sum /= ticks_per_seg\n",
-    "            if (sum >= 0.0):\n",
+    "            if (sum > 0.0):\n",
     "                segment[inst] = 1\n",
     "        midi_segments.append(segment)\n",
     "    return midi_segments\n",
@@ -384,43 +384,36 @@
     "                if remove_preceding_1s:\n",
     "                    midi_array[t][i] = 0\n",
     "                else:\n",
-    "                    midi_array[t][i] = 256\n",
-    "                    midi_array[t+1][i] = 256\n",
-    "                    midi_array[t+2][i] = 256\n",
-    "                    midi_array[t+3][i] = 256\n",
-    "                    midi_array[t+4][i] = 256\n",
-    "                    midi_array[t+5][i] = 256\n",
-    "                    midi_array[t+6][i] = 256\n",
-    "                    midi_array[t+7][i] = 256\n",
+    "                    midi_array[t][i] = 1\n",
     "                    remove_preceding_1s = True\n",
     "            elif midi_array[t][i] == 0:\n",
     "                if remove_preceding_1s:\n",
     "                    remove_preceding_1s = False\n",
-    "        print ('midi_array[', i, ']: ', midi_array[:,i])\n",
+    "        #print ('midi_array[', i, ']: ', midi_array[:,i])\n",
     "    return midi_array\n",
     "        \n",
     "def show_midi_plot(midi_array):\n",
     "    midi_array = np.flip(midi_array.T, axis=0)\n",
-    "    f = plot.figure()\n",
-    "    f.set_figwidth(20)\n",
-    "    f.set_figheight(10)\n",
+    "    fig = plot.figure()\n",
+    "    fig.set_figwidth(20)\n",
+    "    fig.set_figheight(5)\n",
     "    plot.imshow(midi_array, cmap='binary', interpolation='None', aspect=\"auto\")\n",
     "    plot.show()\n",
-    "    return f\n",
+    "    return fig\n",
     "    \n",
     "def show_spectrograph(spec_array):\n",
-    "    spec_array = np.flip(spec_array.T, axis=0)\n",
-    "    f = plot.figure()\n",
-    "    f.set_figwidth(20)\n",
-    "    f.set_figheight(10)\n",
+    "    spec_array = np.flip(spec_array, axis=0)\n",
+    "    fig = plot.figure()\n",
+    "    fig.set_figwidth(20)\n",
+    "    fig.set_figheight(5)\n",
     "    plot.imshow(spec_array, cmap='magma', interpolation='None', aspect=\"auto\")\n",
     "    plot.show()\n",
     "    \n",
     "def show_midi_over_spec(spec_array, midi_array):\n",
     "    midi_array = np.flip(midi_array.T, axis=0)\n",
-    "    spec_array = np.flip(spec_array.T, axis=0)\n",
+    "    spec_array = np.flip(spec_array, axis=0)\n",
     "    fig = plot.figure()\n",
-    "    fig.set_figwidth(10)\n",
+    "    fig.set_figwidth(20)\n",
     "    fig.set_figheight(5)\n",
     "    plot.imshow(spec_array, 'magma', interpolation='None', aspect=\"auto\")\n",
     "    plot.imshow(midi_array, 'binary', interpolation='None', alpha=0.5, aspect=\"auto\")\n",
@@ -455,7 +448,8 @@
     "        show_midi_plot(midi_array)\n",
     "    # squish midi notes to be length of 1\n",
     "    midi_array = squish_midi_notes(midi_array)\n",
-    "    show_midi_plot(midi_array)\n",
+    "    if print_out:\n",
+    "        show_midi_plot(midi_array)\n",
     "    # slice into segments of equal size\n",
     "    ticks_per_sec = int(mido.second2tick(segment_length, ticks_per_beat=midi.ticks_per_beat, tempo=mido.bpm2tempo(data_index.bpm)))\n",
     "    if print_out:\n",
@@ -556,18 +550,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# {dev only}\n",
-    "\n",
+    "# {dev only}\\n\n",
+    "    \n",
     "np.set_printoptions(suppress=False)\n",
     "np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
     "DEV_MODE = True\n",
     "# these values define the resolution of the data\n",
-    "SEGMENT_LEN = 0.01 # length of each segment in seconds\n",
-    "WINDOW_LEN = 1024\n",
-    "HOP_LEN = 280\n",
-    "MEL_FILTERS = 128\n",
+    "SEGMENT_LEN = 0.1 # length of each segment in seconds \n",
     "N_FFT = 2048\n",
+    "WINDOW_LEN = 2048\n",
+    "HOP_LEN = 140\n",
+    "MEL_FILTERS = 64\n",
+    "\n",
     "\n",
     "if DEV_MODE:\n",
     "    # get complete list of train feats / labels\n",
@@ -583,12 +578,12 @@
     "    labels_list = []\n",
     "\n",
     "    for i, index in enumerate(tqdm(dev_csv)):\n",
-    "        print ('\\n', i, \" file: \", index.audio_filename, \" \", index.duration, \"sec bpm: \", index.bpm)\n",
+    "        print ('\\\\n', i, \" file: \", index.audio_filename, \" \", index.duration, \"sec bpm: \", index.bpm)\n",
     "        feats, labels = get_data_segs(index, SEGMENT_LEN, MEL_FILTERS, N_FFT, WINDOW_LEN, HOP_LEN, print_out=True)\n",
     "        print ('feats.shape: ', feats.shape, ' labels.shape: ', labels.shape)\n",
     "        if (feats.shape[0] == labels.shape[0]):\n",
     "            for j in range(len(feats)):\n",
-    "                # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
+    "                # print (\\\"\\\\t\\\", j, \\\" feats: \\\", feats[j].shape, \\\" labels: \\\", labels[j].shape)\n",
     "                # show_midi_plot(labels[j])\n",
     "                # show_spectrograph(feats[j])\n",
     "                # show_midi_over_spec(feats[j], labels[j])\n",
@@ -616,14 +611,16 @@
     "np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
     "# data id (used to make different datasets)\n",
-    "data_id = '_32x16'\n",
+    "data_id = '_64mel_32frames_0.1sec'\n",
     "print (\"DATASET ID: \", data_id)\n",
     "\n",
     "# these values define the resolution of the data\n",
-    "SEGMENT_LEN = 0.1 # length of each segment in seconds\n",
-    "WINDOW_LEN = 1024\n",
-    "HOP_LEN = 280\n",
-    "OVERLAP = 0.5\n",
+    "SEGMENT_LEN = 0.1 # length of each segment in seconds \n",
+    "N_FFT = 2048\n",
+    "WINDOW_LEN = 2048\n",
+    "HOP_LEN = 140\n",
+    "MEL_FILTERS = 64\n",
+    "    \n",
     "\n",
     "# reset temp folder\n",
     "reset_temp_folder()\n",
@@ -640,23 +637,16 @@
     "train_feats = []\n",
     "train_labels = []\n",
     "\n",
-    "testy_csv = []\n",
-    "testy_csv.append(train_csv[0])\n",
-    "testy_csv.append(train_csv[1])\n",
-    "testy_csv.append(train_csv[2])\n",
-    "testy_csv.append(train_csv[3])\n",
-    "\n",
     "for i, index in enumerate(tqdm(train_csv)):\n",
     "    # print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, HOP_LEN, OVERLAP, print_out=False)\n",
-    "    if (feats.shape[0] == labels.shape[0]):\n",
-    "        for j in range(len(feats)):\n",
-    "            # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
-    "            # show_midi_plot(labels[j])\n",
-    "            # show_spectrograph(feats[j])\n",
-    "            # show_midi_over_spec(feats[j], labels[j])\n",
-    "            train_feats.append(feats[j])\n",
-    "            train_labels.append(labels[j])\n",
+    "    feats, labels = get_data_segs(index, SEGMENT_LEN, MEL_FILTERS, N_FFT, WINDOW_LEN, HOP_LEN, print_out=False)\n",
+    "    for j in range(len(feats)):\n",
+    "        # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
+    "        # show_midi_plot(labels[j])\n",
+    "        # show_spectrograph(feats[j])\n",
+    "        # show_midi_over_spec(feats[j], labels[j])\n",
+    "        train_feats.append(feats[j])\n",
+    "        train_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
     "train_feats = np.array(train_feats, dtype='float32')\n",
     "train_labels = np.array(train_labels, dtype='int32')\n",
@@ -685,12 +675,11 @@
     "test_labels = []\n",
     "for i, index in enumerate(tqdm(test_csv)):\n",
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, HOP_LEN, OVERLAP, print_out=False)\n",
-    "    if (feats.shape[0] == labels.shape[0]):\n",
-    "        for j in range(len(feats)):\n",
-    "            # show_midi_over_spec(feats[j], labels[j])\n",
-    "            test_feats.append(feats[j])\n",
-    "            test_labels.append(labels[j])\n",
+    "    feats, labels = get_data_segs(index, SEGMENT_LEN, MEL_FILTERS, N_FFT, WINDOW_LEN, HOP_LEN, print_out=False)\n",
+    "    for j in range(len(feats)):\n",
+    "        # show_midi_over_spec(feats[j], labels[j])\n",
+    "        test_feats.append(feats[j])\n",
+    "        test_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
     "test_feats = np.array(test_feats, dtype='float32')\n",
     "test_labels = np.array(test_labels, dtype='int32')\n",
@@ -716,12 +705,11 @@
     "val_labels = []\n",
     "for i, index in enumerate(tqdm(validation_csv)):\n",
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, HOP_LEN, OVERLAP, print_out=False)\n",
-    "    if (feats.shape[0] == labels.shape[0]):\n",
-    "        for j in range(len(feats)):\n",
-    "            # show_midi_over_spec(feats[j], labels[j])\n",
-    "            val_feats.append(feats[j])\n",
-    "            val_labels.append(labels[j])\n",
+    "    feats, labels = get_data_segs(index, SEGMENT_LEN, MEL_FILTERS, N_FFT, WINDOW_LEN, HOP_LEN, print_out=False)\n",
+    "    for j in range(len(feats)):\n",
+    "        # show_midi_over_spec(feats[j], labels[j])\n",
+    "        val_feats.append(feats[j])\n",
+    "        val_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
     "val_feats = np.array(val_feats, dtype='float32')\n",
     "val_labels = np.array(val_labels, dtype='int32')\n",
@@ -741,7 +729,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -755,12 +743,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2eb717040054f9e1cd6390da57b4c3f6de62338193843f816e8f12a4d5407ba0"
+    "hash": "af153e239d61b5c0d363f35fe8a0509d492506f382d017c98fa3fb49fce70a72"
    }
   }
  },
