--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "system version:  3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]\n",
+      "tensorflow version:  2.10.1\n",
+      "available devices:  ['/device:CPU:0', '/device:GPU:0']\n",
+      "Num GPUs Available:  1\n",
+      "| ID | GPU | MEM |\n",
+      "------------------\n",
+      "|  0 |  5% | 83% |\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.python.client import device_lib\n",
     "import sys\n",
@@ -70,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,37 +93,35 @@
     "def my_model():\n",
     "  model = tf.keras.Sequential()\n",
     "  \n",
-    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
-    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
+    "  model.add(Conv2D(filters=128, kernel_size=(2,2), strides=(1,1)))\n",
+    "  model.add(Conv2D(filters=128, kernel_size=(2,2), strides=(1,1)))\n",
     "  model.add(MaxPool3D(pool_size=(1, 2, 2)))\n",
     "  model.add(Dropout(0.4))\n",
     "  \n",
-    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
-    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
+    "  model.add(Conv2D(filters=128, kernel_size=(2,2), strides=(1,1)))\n",
+    "  model.add(Conv2D(filters=128, kernel_size=(2,2), strides=(1,1)))\n",
     "  model.add(MaxPool3D(pool_size=(1, 2, 2)))\n",
     "  model.add(Dropout(0.4))\n",
     "  \n",
-    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
-    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
-    "  model.add(MaxPool3D(pool_size=(1, 2, 2)))\n",
+    "  # model.add(Conv2D(filters=128, kernel_size=(2,2), strides=(1,1)))\n",
+    "  # model.add(Conv2D(filters=128, kernel_size=(2,2), strides=(1,1)))\n",
+    "  # model.add(MaxPool3D(pool_size=(1, 2, 2)))\n",
+    "  # model.add(Dropout(0.4))\n",
+    "  \n",
+    "  model.add(Reshape((28, 128)))\n",
+    "  \n",
+    "  model.add(Bidirectional(LSTM(units=50, activation='tanh', return_sequences=True)))\n",
+    "  model.add(Bidirectional(LSTM(units=50, activation='tanh', return_sequences=True)))\n",
+    "  model.add(Bidirectional(LSTM(units=50, activation='tanh')))  \n",
     "  model.add(Dropout(0.4))\n",
-    "  \n",
-    "  model.add(Reshape((48, 64)))\n",
-    "  \n",
-    "  model.add(Bidirectional(LSTM(units=50, activation='tanh')))\n",
-    "  model.add(Bidirectional(LSTM(units=50, activation='tanh')))\n",
-    "  model.add(Bidirectional(LSTM(units=50, activation='tanh')))\n",
-    "  \n",
-    "  model.add(Dropout(0.4))\n",
-    "  \n",
-    "  model.add(Flatten())\n",
+    "\n",
     "  model.add(Dense(9, activation='sigmoid', name='output'))\n",
     "  return model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,19 +172,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 1, 63, 15, 128)    640       \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 1, 62, 14, 128)    65664     \n",
+      "                                                                 \n",
+      " max_pooling3d (MaxPooling3D  (None, 1, 31, 7, 128)    0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 1, 31, 7, 128)     0         \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 1, 30, 6, 128)     65664     \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 1, 29, 5, 128)     65664     \n",
+      "                                                                 \n",
+      " max_pooling3d_1 (MaxPooling  (None, 1, 14, 2, 128)    0         \n",
+      " 3D)                                                             \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 1, 14, 2, 128)     0         \n",
+      "                                                                 \n",
+      " reshape (Reshape)           (None, 28, 128)           0         \n",
+      "                                                                 \n",
+      " bidirectional (Bidirectiona  (None, 28, 100)          71600     \n",
+      " l)                                                              \n",
+      "                                                                 \n",
+      " bidirectional_1 (Bidirectio  (None, 28, 100)          60400     \n",
+      " nal)                                                            \n",
+      "                                                                 \n",
+      " bidirectional_2 (Bidirectio  (None, 100)              60400     \n",
+      " nal)                                                            \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 100)               0         \n",
+      "                                                                 \n",
+      " output (Dense)              (None, 9)                 909       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 390,941\n",
+      "Trainable params: 390,941\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# create new model\n",
     "LR = 0.00001\n",
-    "INPUT_SHAPE = (None, 3, 64, 64, 1)\n",
+    "INPUT_SHAPE = (None, 1, 64, 16, 1)\n",
     "\n",
     "model = my_model()\n",
     "model.compile(\n",
     "  optimizer=tf.keras.optimizers.Adam(learning_rate=LR),\n",
-    "  loss=macro_soft_f1,\n",
-    "  metrics=[macro_f1],\n",
+    "  loss=tf.losses.binary_crossentropy,\n",
+    "  metrics=[macro_soft_f1],\n",
     ")\n",
     "\n",
     "model.build(INPUT_SHAPE)\n",
@@ -181,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,12 +261,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train feats.shape:  (594835, 64, 16)\n",
+      "train labels.shape:  (594835, 9)\n",
+      "test feats.shape:  (84464, 64, 16)\n",
+      "test labels.shape:  (84464, 9)\n",
+      "val feats.shape:  (86313, 64, 16)\n",
+      "val labels.shape:  (86313, 9)\n",
+      "train feats.shape:  (594835, 1, 64, 16, 1)\n",
+      "train labels.shape:  (594835, 9)\n",
+      "test feats.shape:  (84464, 1, 64, 16, 1)\n",
+      "test labels.shape:  (84464, 9)\n",
+      "val feats.shape:  (86313, 1, 64, 16, 1)\n",
+      "val labels.shape:  (86313, 9)\n"
+     ]
+    }
+   ],
    "source": [
     "# load data and reshape for training\n",
-    "DATA_ID = '_64x64x3'\n",
+    "DATA_ID = '_64x16'\n",
     "\n",
     "train_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_feats\" + DATA_ID + \".npy\"\n",
     "train_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_labels\" + DATA_ID + \".npy\"\n",
@@ -236,9 +316,9 @@
     "    print ('val feats.shape: ', val_feats_npy.shape)\n",
     "    print ('val labels.shape: ', val_labels_npy.shape)\n",
     "\n",
-    "    train_feats_npy = train_feats_npy.reshape(train_feats_npy.shape[0], train_feats_npy.shape[1], train_feats_npy.shape[2], train_feats_npy.shape[3], 1)\n",
-    "    test_feats_npy = test_feats_npy.reshape(test_feats_npy.shape[0], test_feats_npy.shape[1], test_feats_npy.shape[2], train_feats_npy.shape[3], 1)\n",
-    "    val_feats_npy = val_feats_npy.reshape(val_feats_npy.shape[0], val_feats_npy.shape[1], val_feats_npy.shape[2], train_feats_npy.shape[3], 1)\n",
+    "    train_feats_npy = train_feats_npy.reshape(train_feats_npy.shape[0], 1, train_feats_npy.shape[1], train_feats_npy.shape[2], 1)\n",
+    "    test_feats_npy = test_feats_npy.reshape(test_feats_npy.shape[0], 1, test_feats_npy.shape[1], test_feats_npy.shape[2], 1)\n",
+    "    val_feats_npy = val_feats_npy.reshape(val_feats_npy.shape[0], 1, val_feats_npy.shape[1], val_feats_npy.shape[2], 1)\n",
     "\n",
     "    print ('train feats.shape: ', train_feats_npy.shape)\n",
     "    print ('train labels.shape: ', train_labels_npy.shape)\n",
@@ -252,42 +332,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1965/4651 [===========>..................] - ETA: 2:27:21 - loss: 0.8488 - macro_f1: 0.1566"
+      "Epoch 1/5\n",
+      "37178/37178 [==============================] - 1306s 35ms/step - loss: 0.1750 - macro_soft_f1: 0.9584 - val_loss: 0.1578 - val_macro_soft_f1: 0.9564 - lr: 1.0000e-05\n",
+      "Epoch 2/5\n",
+      "37178/37178 [==============================] - 1288s 35ms/step - loss: 0.1600 - macro_soft_f1: 0.9510 - val_loss: 0.1519 - val_macro_soft_f1: 0.9514 - lr: 1.0000e-05\n",
+      "Epoch 3/5\n",
+      "37178/37178 [==============================] - 1289s 35ms/step - loss: 0.1566 - macro_soft_f1: 0.9472 - val_loss: 0.1500 - val_macro_soft_f1: 0.9514 - lr: 1.0000e-05\n",
+      "Epoch 4/5\n",
+      "37178/37178 [==============================] - 1227s 33ms/step - loss: 0.1548 - macro_soft_f1: 0.9452 - val_loss: 0.1482 - val_macro_soft_f1: 0.9492 - lr: 1.0000e-05\n",
+      "Epoch 5/5\n",
+      "37178/37178 [==============================] - 1291s 35ms/step - loss: 0.1534 - macro_soft_f1: 0.9435 - val_loss: 0.1475 - val_macro_soft_f1: 0.9491 - lr: 1.0000e-05\n"
      ]
     }
    ],
    "source": [
     "# train the network!\n",
-    "EPOCHS = 1\n",
-    "BATCH_SIZE = 64\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 16\n",
     "\n",
     "# Define some callbacks to improve training.\n",
-    "early_stopping = keras.callbacks.EarlyStopping(monitor=\"val_loss\", patience=10)\n",
+    "#early_stopping = keras.callbacks.EarlyStopping(monitor=\"val_loss\", patience=10)\n",
     "reduce_lr = keras.callbacks.ReduceLROnPlateau(monitor=\"val_loss\", patience=5)\n",
     "\n",
-    "with tf.device('/CPU:0'):\n",
+    "with tf.device('/GPU:0'):\n",
     "    model.fit(\n",
     "        x=train_feats_npy, \n",
     "        y=train_labels_npy, \n",
     "        epochs=EPOCHS, \n",
     "        batch_size=BATCH_SIZE, \n",
-    "        #validation_data=(val_feats_npy, val_labels_npy), \n",
-    "        #callbacks=[early_stopping, reduce_lr]\n",
+    "        validation_data=(val_feats_npy, val_labels_npy), \n",
+    "        callbacks=[reduce_lr]\n",
     "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluate on test data\n",
+      "37178/37178 [==============================] - 674s 18ms/step - loss: 0.1489 - macro_soft_f1: 0.9514\n",
+      "test loss, test acc: [0.14888018369674683, 0.9513518810272217]\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model on the test data using `evaluate`\n",
     "print(\"Evaluate on test data\")\n",
@@ -297,13 +396,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, lstm_cell_1_layer_call_fn while saving (showing 5 of 16). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models/model_64mel_16frames_0.05sec\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models/model_64mel_16frames_0.05sec\\assets\n"
+     ]
+    }
+   ],
    "source": [
     "# save model\n",
     "\n",
-    "MODEL_ID = 'model_64x64'\n",
+    "MODEL_ID = 'model_64mel_16frames_0.05sec'\n",
     "model.save('models/' + MODEL_ID)"
    ]
   }
