Change loss to compare the middle pred_len of tkns

--- a/network_training.ipynb
+++ b/network_training.ipynb
@@ -98,6 +98,7 @@
     "model_type = \"bert_inspired\" # \"bert_inspired\" \"transformer\" or \"biLSTM\"\n",
     "\n",
     "model = None\n",
+    "model_config = None\n",
     "if model_type == \"biLSTM\":\n",
     "    # Create model\n",
     "    model_config = dotdict({\n",
@@ -250,13 +251,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "config = dotdict({\n",
+    "exp_config = dotdict({\n",
     "        \"seq_len\": 9,\n",
+    "        \"pred_len\": 3,\n",
     "        \"data_id\": \"16x32\",\n",
     "        \"batch_size\": 512,\n",
-    "        \"learning_rate\": 0.0000001,\n",
-    "        \"max_epochs\": 5\n",
+    "        \"learning_rate\": 0.000001,\n",
+    "        \"max_epochs\": 5,\n",
+    "        \"loss\": \"BCE\"\n",
     "    })\n",
     "\n",
     "\n",
@@ -265,15 +267,15 @@
     "\n",
     "\n",
     "pl.seed_everything(seed=123, workers=True)\n",
-    "data_module = DataModule(config, num_workers)\n",
+    "data_module = DataModule(exp_config, num_workers)\n",
     "\n",
     "\n",
     "# Intantiate Lightning Model\n",
-    "exp = ExpMain(model, config)\n",
+    "exp = ExpMain(model, exp_config)\n",
     "\n",
     "# Create Trainer\n",
     "trainer_params = {\n",
-    "    \"max_epochs\":config.max_epochs, \n",
+    "    \"max_epochs\":exp_config.max_epochs, \n",
     "    # \"auto_scale_batch_size\": \"power\",\n",
     "    # \"auto_lr_find\": True,\n",
     "    \"logger\": True,\n",
@@ -288,6 +290,7 @@
     "if \"scale_batch_size\" in tuner_result:\n",
     "    print(\"scale_batch_size:\", tuner_result[\"scale_batch_size\"])\n",
     "\n",
+    "trainer.logger.log_hyperparams(model_config | exp_config)\n",
     "# Train Model\n",
     "trainer.fit(exp, data_module)\n",
     "\n",
