work from past few hours

--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -561,7 +561,7 @@
     "N_FFT = 2048\n",
     "WINDOW_LEN = 2048\n",
     "HOP_LEN = 140\n",
-    "MEL_FILTERS = 64\n",
+    "MEL_FILTERS = 128\n",
     "\n",
     "\n",
     "if DEV_MODE:\n",
@@ -602,9 +602,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATASET ID:  _64mel_32frames_0.1sec\n",
+      "starting training dataset creation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 846/846 [17:48<00:00,  1.26s/it]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_feats.shape:  (297607, 64, 32)\n",
+      "train_labels.shape:  (297607, 9)\n",
+      "training dataset complete!\n",
+      "time elapsed:  1069.98  sec\n",
+      "\n",
+      "starting test dataset creation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 124/124 [02:31<00:00,  1.22s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_feats.shape:  (42266, 64, 32)\n",
+      "test_labels.shape:  (42266, 9)\n",
+      "test dataset complete!\n",
+      "time elapsed:  151.58  sec\n",
+      "\n",
+      "starting validation dataset creation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 120/120 [02:35<00:00,  1.29s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_feats.shape:  (43185, 64, 32)\n",
+      "val_labels.shape:  (43185, 9)\n",
+      "validation dataset complete!\n",
+      "time elapsed:  155.28  sec\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 3.0 run dataset creation loops - save to file\n",
     "\n",
@@ -618,7 +683,7 @@
     "SEGMENT_LEN = 0.1 # length of each segment in seconds \n",
     "N_FFT = 2048\n",
     "WINDOW_LEN = 2048\n",
-    "HOP_LEN = 140\n",
+    "HOP_LEN = 280\n",
     "MEL_FILTERS = 64\n",
     "    \n",
     "\n",
