--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
       "Num GPUs Available:  1\n",
       "| ID | GPU | MEM |\n",
       "------------------\n",
-      "|  0 |  5% | 83% |\n"
+      "|  0 |  6% | 23% |\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,47 +172,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 1, 63, 15, 128)    640       \n",
+      " conv2d_12 (Conv2D)          (None, 1, 63, 15, 128)    640       \n",
       "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 1, 62, 14, 128)    65664     \n",
+      " conv2d_13 (Conv2D)          (None, 1, 62, 14, 128)    65664     \n",
       "                                                                 \n",
-      " max_pooling3d (MaxPooling3D  (None, 1, 31, 7, 128)    0         \n",
-      " )                                                               \n",
-      "                                                                 \n",
-      " dropout (Dropout)           (None, 1, 31, 7, 128)     0         \n",
-      "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 1, 30, 6, 128)     65664     \n",
-      "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 1, 29, 5, 128)     65664     \n",
-      "                                                                 \n",
-      " max_pooling3d_1 (MaxPooling  (None, 1, 14, 2, 128)    0         \n",
+      " max_pooling3d_6 (MaxPooling  (None, 1, 31, 7, 128)    0         \n",
       " 3D)                                                             \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 1, 14, 2, 128)     0         \n",
+      " dropout_8 (Dropout)         (None, 1, 31, 7, 128)     0         \n",
       "                                                                 \n",
-      " reshape (Reshape)           (None, 28, 128)           0         \n",
+      " conv2d_14 (Conv2D)          (None, 1, 30, 6, 128)     65664     \n",
       "                                                                 \n",
-      " bidirectional (Bidirectiona  (None, 28, 100)          71600     \n",
-      " l)                                                              \n",
+      " conv2d_15 (Conv2D)          (None, 1, 29, 5, 128)     65664     \n",
       "                                                                 \n",
-      " bidirectional_1 (Bidirectio  (None, 28, 100)          60400     \n",
+      " max_pooling3d_7 (MaxPooling  (None, 1, 14, 2, 128)    0         \n",
+      " 3D)                                                             \n",
+      "                                                                 \n",
+      " dropout_9 (Dropout)         (None, 1, 14, 2, 128)     0         \n",
+      "                                                                 \n",
+      " reshape_2 (Reshape)         (None, 28, 128)           0         \n",
+      "                                                                 \n",
+      " bidirectional_6 (Bidirectio  (None, 28, 100)          71600     \n",
       " nal)                                                            \n",
       "                                                                 \n",
-      " bidirectional_2 (Bidirectio  (None, 100)              60400     \n",
+      " bidirectional_7 (Bidirectio  (None, 28, 100)          60400     \n",
       " nal)                                                            \n",
       "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 100)               0         \n",
+      " bidirectional_8 (Bidirectio  (None, 100)              60400     \n",
+      " nal)                                                            \n",
+      "                                                                 \n",
+      " dropout_10 (Dropout)        (None, 100)               0         \n",
       "                                                                 \n",
       " output (Dense)              (None, 9)                 909       \n",
       "                                                                 \n",
@@ -226,7 +226,7 @@
    ],
    "source": [
     "# create new model\n",
-    "LR = 0.00001\n",
+    "LR = 0.000001\n",
     "INPUT_SHAPE = (None, 1, 64, 16, 1)\n",
     "\n",
     "model = my_model()\n",
@@ -261,31 +261,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train feats.shape:  (594835, 64, 16)\n",
+      "train feats.shape:  (594835, 64, 32)\n",
       "train labels.shape:  (594835, 9)\n",
-      "test feats.shape:  (84464, 64, 16)\n",
+      "test feats.shape:  (84464, 64, 32)\n",
       "test labels.shape:  (84464, 9)\n",
-      "val feats.shape:  (86313, 64, 16)\n",
+      "val feats.shape:  (86313, 64, 32)\n",
       "val labels.shape:  (86313, 9)\n",
-      "train feats.shape:  (594835, 1, 64, 16, 1)\n",
+      "train feats.shape:  (594835, 1, 64, 32, 1)\n",
       "train labels.shape:  (594835, 9)\n",
-      "test feats.shape:  (84464, 1, 64, 16, 1)\n",
+      "test feats.shape:  (84464, 1, 64, 32, 1)\n",
       "test labels.shape:  (84464, 9)\n",
-      "val feats.shape:  (86313, 1, 64, 16, 1)\n",
+      "val feats.shape:  (86313, 1, 64, 32, 1)\n",
       "val labels.shape:  (86313, 9)\n"
      ]
     }
    ],
    "source": [
     "# load data and reshape for training\n",
-    "DATA_ID = '_64x16'\n",
+    "DATA_ID = '_128mel_16frames_0.1sec'\n",
     "\n",
     "train_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_feats\" + DATA_ID + \".npy\"\n",
     "train_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_labels\" + DATA_ID + \".npy\"\n",
@@ -332,30 +332,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "37178/37178 [==============================] - 1306s 35ms/step - loss: 0.1750 - macro_soft_f1: 0.9584 - val_loss: 0.1578 - val_macro_soft_f1: 0.9564 - lr: 1.0000e-05\n",
-      "Epoch 2/5\n",
-      "37178/37178 [==============================] - 1288s 35ms/step - loss: 0.1600 - macro_soft_f1: 0.9510 - val_loss: 0.1519 - val_macro_soft_f1: 0.9514 - lr: 1.0000e-05\n",
-      "Epoch 3/5\n",
-      "37178/37178 [==============================] - 1289s 35ms/step - loss: 0.1566 - macro_soft_f1: 0.9472 - val_loss: 0.1500 - val_macro_soft_f1: 0.9514 - lr: 1.0000e-05\n",
-      "Epoch 4/5\n",
-      "37178/37178 [==============================] - 1227s 33ms/step - loss: 0.1548 - macro_soft_f1: 0.9452 - val_loss: 0.1482 - val_macro_soft_f1: 0.9492 - lr: 1.0000e-05\n",
-      "Epoch 5/5\n",
-      "37178/37178 [==============================] - 1291s 35ms/step - loss: 0.1534 - macro_soft_f1: 0.9435 - val_loss: 0.1475 - val_macro_soft_f1: 0.9491 - lr: 1.0000e-05\n"
+      "594835/594835 [==============================] - 15587s 26ms/step - loss: 0.1581 - macro_soft_f1: 0.9904 - val_loss: 0.1520 - val_macro_soft_f1: 0.9893 - lr: 1.0000e-06\n"
      ]
     }
    ],
    "source": [
     "# train the network!\n",
-    "EPOCHS = 10\n",
-    "BATCH_SIZE = 16\n",
+    "EPOCHS = 1\n",
+    "BATCH_SIZE = 1\n",
     "\n",
     "# Define some callbacks to improve training.\n",
     "#early_stopping = keras.callbacks.EarlyStopping(monitor=\"val_loss\", patience=10)\n",
@@ -374,19 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluate on test data\n",
-      "37178/37178 [==============================] - 674s 18ms/step - loss: 0.1489 - macro_soft_f1: 0.9514\n",
-      "test loss, test acc: [0.14888018369674683, 0.9513518810272217]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Evaluate the model on the test data using `evaluate`\n",
     "print(\"Evaluate on test data\")\n",
@@ -396,35 +377,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, lstm_cell_1_layer_call_fn while saving (showing 5 of 16). These functions will not be directly callable after loading.\n"
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, lstm_cell_19_layer_call_fn while saving (showing 5 of 16). These functions will not be directly callable after loading.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: models/model_64mel_16frames_0.05sec\\assets\n"
+      "INFO:tensorflow:Assets written to: models/model_64mel_16frames_0.05sec_1batch_1epochs\\assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: models/model_64mel_16frames_0.05sec\\assets\n"
+      "INFO:tensorflow:Assets written to: models/model_64mel_16frames_0.05sec_1batch_1epochs\\assets\n"
      ]
     }
    ],
    "source": [
     "# save model\n",
     "\n",
-    "MODEL_ID = 'model_64mel_16frames_0.05sec'\n",
+    "MODEL_ID = 'model_64mel_16frames_0.05sec_1batch_1epochs'\n",
     "model.save('models/' + MODEL_ID)"
    ]
   }
